==> qmk/ChibiOS-Contrib/os/hal/ports/WB32/LLD/SPIv1/hal_spi_lld.c <==
#include "hal.h"
#define QSPI_RX_DMA_CHANNEL                                                 \
  WB32_DMA_GETCHANNEL(WB32_SPI_QSPI_RX_DMA_STREAM,                        \
                       WB32_QSPI_RX_DMA_CHN)
#define QSPI_TX_DMA_CHANNEL                                                 \
  WB32_DMA_GETCHANNEL(WB32_SPI_QSPI_TX_DMA_STREAM,                        \
                       WB32_QSPI_TX_DMA_CHN)
#define SPIM2_RX_DMA_CHANNEL                                                 \
  WB32_DMA_GETCHANNEL(WB32_SPI_SPIM2_RX_DMA_STREAM,                        \
                       WB32_SPIM2_RX_DMA_CHN)
#define SPIM2_TX_DMA_CHANNEL                                                 \
  WB32_DMA_GETCHANNEL(WB32_SPI_SPIM2_TX_DMA_STREAM,                        \
                       WB32_SPIM2_TX_DMA_CHN)
#define SPIS1_RX_DMA_CHANNEL                                                 \
  WB32_DMA_GETCHANNEL(WB32_SPI_SPIS1_RX_DMA_STREAM,                        \
                       WB32_SPIS1_RX_DMA_CHN)
#define SPIS1_TX_DMA_CHANNEL                                                 \
  WB32_DMA_GETCHANNEL(WB32_SPI_SPIS1_TX_DMA_STREAM,                        \
                       WB32_SPIS1_TX_DMA_CHN)
#define SPIS2_RX_DMA_CHANNEL                                                 \
  WB32_DMA_GETCHANNEL(WB32_SPI_SPIS2_RX_DMA_STREAM,                        \
                       WB32_SPIS2_RX_DMA_CHN)

void spi_lld_init(void) {

#if WB32_SPI_USE_QSPI
  spiObjectInit(&SPIDQ);
  SPIDQ.spi       = QSPI;
#endif

#if WB32_SPI_USE_SPIM2
  spiObjectInit(&SPIDM2);
  SPIDM2.spi       = SPIM2;
#endif

#if WB32_SPI_USE_SPIS1
  spiObjectInit(&SPIDS1);
  SPIDS1.spi       = SPIS1;
#endif

#if WB32_SPI_USE_SPIS2
  spiObjectInit(&SPIDS2);
  SPIDS2.spi       = SPIS2;
#endif
}

void spi_lld_start(SPIDriver *spip) {

  /* If in stopped state then enables the SPI and DMA clocks.*/
  if (spip->state == SPI_STOP) {
#if WB32_SPI_USE_QSPI
    if (&SPIDQ == spip) {
      /* Enable the QSPI clock */
      RCC_APB1PeriphClockCmd( RCC_APB1Periph_BMX1 | RCC_APB1Periph_QSPI, ENABLE );

      /* Deinit the QSPI */
      RCC_APB1PeriphResetCmd(RCC_APB1Periph_QSPI, ENABLE);
      RCC_APB1PeriphResetCmd(RCC_APB1Periph_QSPI, DISABLE);

      nvicEnableVector(QSPI_IRQn, WB32_SPI_QSPI_IRQ_PRIORITY);

      spip->spi->BAUDR = spip->config->SPI_BaudRatePrescaler;

      spip->spi->SER |= spip->config->SPI_NSS;
    }
#endif
#if WB32_SPI_USE_SPIM2
    if (&SPIDM2 == spip) {
       /* Enable the SPIM2 clock */
      RCC_APB2PeriphClockCmd( RCC_APB2Periph_BMX2 | RCC_APB2Periph_SPIM2, ENABLE );

      /* Deinit the SPIM2 */
      RCC_APB2PeriphResetCmd(RCC_APB2Periph_SPIM2, ENABLE);
      RCC_APB2PeriphResetCmd(RCC_APB2Periph_SPIM2, DISABLE);

      nvicEnableVector(SPIM2_IRQn, WB32_SPI_SPIM2_IRQ_PRIORITY);

      spip->spi->BAUDR = spip->config->SPI_BaudRatePrescaler;

      spip->spi->SER |= spip->config->SPI_NSS;
    }
#endif
#if WB32_SPI_USE_SPIS1
    if (&SPIDS1 == spip) {
       /* Enable the SPIS1 clock */
      RCC_APB1PeriphClockCmd( RCC_APB1Periph_BMX1 | RCC_APB1Periph_SPIS1, ENABLE );
      RCC_SPIS1CLKCmd(ENABLE);

      /* Deinit the SPIS1 */
      RCC_APB1PeriphResetCmd(RCC_APB1Periph_SPIS1, ENABLE);
      RCC_APB1PeriphResetCmd(RCC_APB1Periph_SPIS1, DISABLE);

      nvicEnableVector(SPIS1_IRQn, WB32_SPI_SPIS1_IRQ_PRIORITY);
    }
#endif
#if WB32_SPI_USE_SPIS2
    if (&SPIDS2 == spip) {
       /* Enable the SPIS2 clock */
      RCC_APB2PeriphClockCmd( RCC_APB2Periph_BMX2 | RCC_APB2Periph_SPIS2, ENABLE );
      RCC_SPIS2CLKCmd(ENABLE);

      /* Deinit the SPIS2 */
      RCC_APB2PeriphResetCmd(RCC_APB2Periph_SPIS2, ENABLE);
      RCC_APB2PeriphResetCmd(RCC_APB2Periph_SPIS2, DISABLE);

      nvicEnableVector(SPIS2_IRQn, WB32_SPI_SPIS2_IRQ_PRIORITY);
    }
#endif
  }
#if (SPI_SUPPORTS_CIRCULAR == TRUE) || defined(__DOXYGEN__)
  osalDbgAssert(spip->config->circular != FALSE, "unsupported circular");
#endif

  spip->spi->CR0 = (spip->config->SPI_DataSize | spip->config->SPI_FrameFormat |
                        spip->config->SPI_CPHA | spip->config->SPI_CPOL |
                                        spip->config->SPI_TransferMode);

  spip->spi->TXFTLR = 2;

  /* Disable all SPI interrupt */
  spip->spi->IER &= ~0xFF;
  /* Clear all SPI's interrupt pending bits */
  (void)spip->spi->ICR;
}

void spi_lld_stop(SPIDriver *spip) {

  /* If in ready state then disables the SPI clock.*/
  if (spip->state == SPI_READY) {

    /* SPI disable.*/
    spip->spi->SPIENR = 0x00;

    /* Disable all SPI interrupt */
    spip->spi->IER &= ~0xFF;
    /* Clear all SPI's interrupt pending bits */
    (void)spip->spi->ICR;


#if WB32_SPI_USE_QSPI
    if (&SPIDQ == spip){
      nvicDisableVector(QSPI_IRQn);
      /* Disable the QSPI clock */
      RCC_APB1PeriphClockCmd( RCC_APB1Periph_QSPI, DISABLE );}
#endif
#if WB32_SPI_USE_SPIM2
    if (&SPIDM2 == spip){
      nvicDisableVector(SPIM2_IRQn);
      /* Disable the SPIM2 clock */
      RCC_APB2PeriphClockCmd( RCC_APB2Periph_SPIM2, DISABLE );}
#endif
#if WB32_SPI_USE_SPIS1
    if (&SPIDS1 == spip){
      nvicDisableVector(SPIS1_IRQn);
      /* Disable the SPIS1 clock */
      RCC_SPIS1CLKCmd(DISABLE);
      RCC_APB1PeriphClockCmd( RCC_APB1Periph_SPIS1, DISABLE );}
#endif
#if WB32_SPI_USE_SPIS2
    if (&SPIDS2 == spip){
      nvicDisableVector(SPIS2_IRQn);
      /* Disable the SPIS2 clock */
      RCC_SPIS2CLKCmd(DISABLE);
      RCC_APB2PeriphClockCmd( RCC_APB2Periph_SPIS2, DISABLE );}
#endif
  }
}

void spi_lld_exchange(SPIDriver *spip, size_t n,
                      const void *txbuf, void *rxbuf) {

  spip->g_spi_xfer_info.tx_buf = txbuf;
  spip->g_spi_xfer_info.tx_len = n;
  spip->g_spi_xfer_info.tx_dummy = FALSE;

  spip->g_spi_xfer_info.rx_buf = rxbuf;
  spip->g_spi_xfer_info.rx_len = n;
  spip->g_spi_xfer_info.rx_dummy = FALSE;

  // spip->spi->IER |= (SPI_IT_TXE | SPI_IT_RXF);
  spip->spi->IER |= (spip->config->SPI_IT);
  spip->spi->SPIENR = 0x01;
}

void spi_lld_send(SPIDriver *spip, size_t n, const void *txbuf) {

  spip->g_spi_xfer_info.tx_buf = txbuf;
  spip->g_spi_xfer_info.tx_len = n;
  spip->g_spi_xfer_info.tx_dummy = FALSE;

  spip->g_spi_xfer_info.rx_buf = (uint8_t *)&dummyrx;
  spip->g_spi_xfer_info.rx_len = n;
  spip->g_spi_xfer_info.rx_dummy = TRUE;

  // spip->spi->IER |= (SPI_IT_TXE | SPI_IT_RXF);
  spip->spi->IER |= (spip->config->SPI_IT);
  spip->spi->SPIENR = 0x01;
}

void spi_lld_receive(SPIDriver *spip, size_t n, void *rxbuf) {

  spip->g_spi_xfer_info.tx_buf = (const uint8_t *)&dummytx;
  spip->g_spi_xfer_info.tx_len = n;
  spip->g_spi_xfer_info.tx_dummy = TRUE;

  spip->g_spi_xfer_info.rx_buf = rxbuf;
  spip->g_spi_xfer_info.rx_len = n;
  spip->g_spi_xfer_info.rx_dummy = FALSE;

  // spip->spi->IER |= (SPI_IT_TXE | SPI_IT_RXF);
  spip->spi->IER |= (spip->config->SPI_IT);
  spip->spi->SPIENR = 0x01;
}

uint16_t spi_lld_polled_exchange(SPIDriver *spip, uint16_t frame) {

  while ((spip->spi->SR & SPI_SR_TFE) == 0);
  spip->spi->DR = frame;
  while ((spip->spi->SR & SPI_SR_RFNE) == 0);
  return spip->spi->DR;
}
