==> rusefi/rusefi/firmware/config/boards/kinetis/OS/os/hal/ports/KINETIS/LLD/SPIv2/hal_spi_lld.c <==
#include "hal.h"

void spi_lld_init(void) {
#if KINETIS_SPI_USE_SPI0
  spiObjectInit(&SPID1);
#endif
#if KINETIS_SPI_USE_SPI1
  spiObjectInit(&SPID2);
#endif
}

void spi_lld_start(SPIDriver *spip) {

  /* If in stopped state then enables the SPI and DMA clocks.*/
  if (spip->state == SPI_STOP) {
  	clock_ip_name_t clockName;
#if KINETIS_SPI_USE_SPI0
    if (&SPID1 == spip) {
      spip->spi = LPSPI0;
      clockName = kCLOCK_Lpspi0;
    }
#endif

#if KINETIS_SPI_USE_SPI1
    if (&SPID2 == spip) {
      spip->spi = LPSPI1;
      clockName = kCLOCK_Lpspi1;
    }
#endif

	spip->isMaster = (spip->config->cr1 & SPI_CR1_MSTR) != 0;
	int pcsIdx = spi_detectPCS(spip->isMaster, spip->config->ssport, spip->config->sspad);
	osalDbgAssert(pcsIdx >= 0, "invalid SPI PCS pin");
	spip->flags = pcsIdx;  // kLPSPI_MasterByteSwap;
	
	//CLOCK_SetIpSrc(clockName, kCLOCK_IpSrcSysPllAsync);

	if (spip->isMaster) {
		// Master mode
		lpspi_master_config_t masterConfig;
		LPSPI_MasterGetDefaultConfig(&masterConfig);

	    masterConfig.baudRate = spi_detectBaudRate(spip);
	    masterConfig.bitsPerFrame = (spip->config->cr1 & SPI_CR1_DFF) ? 16 : 8;
	    masterConfig.cpol = (spip->config->cr1 & SPI_CR1_CPOL) ? kLPSPI_ClockPolarityActiveLow : kLPSPI_ClockPolarityActiveHigh;
	    masterConfig.cpha = (spip->config->cr1 & SPI_CR1_CPHA) ? kLPSPI_ClockPhaseSecondEdge : kLPSPI_ClockPhaseFirstEdge;
	    masterConfig.direction = (spip->config->cr1 & SPI_CR1_LSBFIRST) ? kLPSPI_LsbFirst : kLPSPI_MsbFirst;

	    masterConfig.pcsToSckDelayInNanoSec = 1000000000 / masterConfig.baudRate * 2;
	    masterConfig.lastSckToPcsDelayInNanoSec = 1000000000 / masterConfig.baudRate * 2;
	    masterConfig.betweenTransferDelayInNanoSec = 1000000000 / masterConfig.baudRate * 2;
	    
	    masterConfig.whichPcs = pcsIdx;

		if (spip->config->circular)
			spip->flags |= kLPSPI_MasterPcsContinuous;
	    
		uint32_t srcClock_Hz = CLOCK_GetIpFreq(clockName);
		LPSPI_MasterInit(spip->spi, &masterConfig, srcClock_Hz);

		LPSPI_MasterTransferCreateHandle(spip->spi, &spip->masterHandle, spi_lld_master_callback, spip);
	} else {
		// todo: add slave support
		lpspi_slave_config_t slaveConfig;
		LPSPI_SlaveGetDefaultConfig(&slaveConfig);
		LPSPI_SlaveInit(spip->spi, &slaveConfig);
		
		LPSPI_SlaveTransferCreateHandle(spip->spi, &spip->slaveHandle, spi_lld_slave_callback, spip);
	}

	// todo: add DMA support?
    //nvicEnableVector(DMA0_IRQn, KINETIS_SPI0_RX_DMA_IRQ_PRIORITY);
  }
}

void spi_lld_stop(SPIDriver *spip) {

  /* If in ready state then disables the SPI clock.*/
  if (spip->state == SPI_READY) {

    //nvicDisableVector(DMA0_IRQn);

#if KINETIS_SPI_USE_SPI0
    if (&SPID1 == spip) {
    	LPSPI_Deinit(LPSPI0);
    }
#endif

#if KINETIS_SPI_USE_SPI1
    if (&SPID2 == spip) {
    	LPSPI_Deinit(LPSPI1);
    }
#endif
  }
}

void spi_lld_exchange(SPIDriver *spip, size_t n,
                      const void *txbuf, void *rxbuf) {
	spip->handleXfer.txData = (uint8_t *)txbuf;
	spip->handleXfer.rxData = rxbuf;
	spip->handleXfer.dataSize = n;
	spip->handleXfer.configFlags = spip->flags;
	
	if (spip->isMaster) {
		LPSPI_MasterTransferNonBlocking(spip->spi, &spip->masterHandle, &spip->handleXfer);
	} else {
		LPSPI_SlaveTransferNonBlocking(spip->spi, &spip->slaveHandle, &spip->handleXfer);
	}
}

void spi_lld_send(SPIDriver *spip, size_t n, const void *txbuf) {

	spip->handleXfer.txData = (uint8_t *)txbuf;
	spip->handleXfer.rxData = NULL;
	spip->handleXfer.dataSize = n;
	spip->handleXfer.configFlags = spip->flags;

	if (spip->isMaster) {
		LPSPI_MasterTransferNonBlocking(spip->spi, &spip->masterHandle, &spip->handleXfer);
	} else {
		LPSPI_SlaveTransferNonBlocking(spip->spi, &spip->slaveHandle, &spip->handleXfer);
	}
}

void spi_lld_receive(SPIDriver *spip, size_t n, void *rxbuf) {

	spip->handleXfer.txData = NULL;
	spip->handleXfer.rxData = (uint8_t *)rxbuf;
	spip->handleXfer.dataSize = n;
	spip->handleXfer.configFlags = spip->flags;

	if (spip->isMaster) {
		LPSPI_MasterTransferNonBlocking(spip->spi, &spip->masterHandle, &spip->handleXfer);
	} else {
		LPSPI_SlaveTransferNonBlocking(spip->spi, &spip->slaveHandle, &spip->handleXfer);
	}
}

uint16_t spi_lld_polled_exchange(SPIDriver *spip, uint16_t frame) {
	// todo: use faster LPSPI_WriteData()
	uint16_t rxFrame = 0;
	spip->handleXfer.txData = (uint8_t *)&frame;
	spip->handleXfer.rxData = (uint8_t *)&rxFrame;
	spip->handleXfer.dataSize = sizeof(frame);
	spip->handleXfer.configFlags = spip->flags;

	if (spip->isMaster) {
		LPSPI_MasterTransferBlocking(spip->spi, &spip->handleXfer);
	} else {
		// todo: slave support?
	}
	// todo: check status?
	return rxFrame;
}
